# TT-infotecs

./: CMakeLists.txt  README.md
apps/log_app/: main.cpp
apps/log_stats/: main.cpp
logging/include/logging/: logger.hpp  sinks.hpp  timefmt.hpp
logging/src/: file_sink.cpp  logger.cpp  upd_sink.cpp
tests/: test_filters_formats.cpp  test_init_errors.cpp  test_logger_basic.cpp  test_timefmt.cpp  test_udp_sink.cpp
